--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "scripts": {
     "start": "node dist/index.js",
     "decoder": "node dist/hydra/decoder.js",
-    "bundle": "tsup src/index.ts --format esm"
+    "bundle": "tsup src/index.ts --format esm",
+    "gen-cert": "node src/create-cert.js"
   },
   "type": "module",
   "dependencies": {
